[gd_scene load_steps=10 format=2]

[ext_resource path="res://Resorces/industrial.v2.png" type="Texture" id=1]
[ext_resource path="res://addons/GodotTIE/text_interface_engine.gd" type="Script" id=2]
[ext_resource path="res://scripts/ending.gd" type="Script" id=3]
[ext_resource path="res://Resorces/white.png" type="Texture" id=4]
[ext_resource path="res://addons/GodotTIE/GodotTIE_icon.png" type="Texture" id=5]
[ext_resource path="res://soundmaker/soundmaker.tscn" type="PackedScene" id=6]


[sub_resource type="TileSet" id=1]
0/name = "industrial.v2.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 16, 32, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "industrial.v2.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 176, 112, 96, 96 )
1/tile_mode = 1
1/autotile/bitmask_mode = 1
1/autotile/bitmask_flags = [ Vector2( 0, 1 ), 176, Vector2( 0, 2 ), 50, Vector2( 1, 0 ), 56, Vector2( 1, 1 ), 58, Vector2( 1, 2 ), 184, Vector2( 2, 0 ), 152, Vector2( 2, 1 ), 26, Vector2( 2, 2 ), 56, Vector2( 3, 0 ), 186, Vector2( 3, 1 ), 146, Vector2( 3, 2 ), 154, Vector2( 3, 3 ), 178, Vector2( 3, 4 ), 146, Vector2( 3, 5 ), 18, Vector2( 4, 1 ), 56, Vector2( 4, 2 ), 146, Vector2( 4, 3 ), 146, Vector2( 4, 4 ), 146, Vector2( 5, 0 ), 146, Vector2( 5, 1 ), 24 ]
1/autotile/icon_coordinate = Vector2( 1, 0 )
1/autotile/tile_size = Vector2( 16, 16 )
1/autotile/spacing = 0
1/autotile/occluder_map = [  ]
1/autotile/navpoly_map = [  ]
1/autotile/priority_map = [  ]
1/autotile/z_index_map = [  ]
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "industrial.v2.png 2"
2/texture = ExtResource( 1 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 192, 64, 64, 48 )
2/tile_mode = 1
2/autotile/bitmask_mode = 1
2/autotile/bitmask_flags = [ Vector2( 0, 0 ), 176, Vector2( 0, 1 ), 178, Vector2( 0, 2 ), 50, Vector2( 1, 0 ), 56, Vector2( 1, 1 ), 184, Vector2( 1, 2 ), 58, Vector2( 2, 0 ), 56, Vector2( 2, 1 ), 154, Vector2( 2, 2 ), 26, Vector2( 3, 0 ), 152, Vector2( 3, 1 ), 146 ]
2/autotile/icon_coordinate = Vector2( 3, 1 )
2/autotile/tile_size = Vector2( 16, 16 )
2/autotile/spacing = 0
2/autotile/occluder_map = [  ]
2/autotile/navpoly_map = [  ]
2/autotile/priority_map = [  ]
2/autotile/z_index_map = [  ]
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "industrial.v2.png 3"
3/texture = ExtResource( 1 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 128, 32, 64, 48 )
3/tile_mode = 1
3/autotile/bitmask_mode = 1
3/autotile/bitmask_flags = [ Vector2( 0, 0 ), 176, Vector2( 0, 1 ), 146, Vector2( 0, 2 ), 50, Vector2( 1, 0 ), 56, Vector2( 1, 1 ), 178, Vector2( 1, 2 ), 56, Vector2( 2, 0 ), 58, Vector2( 2, 1 ), 184, Vector2( 2, 2 ), 26, Vector2( 3, 0 ), 152, Vector2( 3, 1 ), 154, Vector2( 3, 2 ), 511 ]
3/autotile/icon_coordinate = Vector2( 1, 0 )
3/autotile/tile_size = Vector2( 16, 16 )
3/autotile/spacing = 0
3/autotile/occluder_map = [  ]
3/autotile/navpoly_map = [  ]
3/autotile/priority_map = [  ]
3/autotile/z_index_map = [  ]
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "industrial.v2.png 4"
4/texture = ExtResource( 1 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 80, 208, 32, 32 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "industrial.v2.png 5"
5/texture = ExtResource( 1 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 192, 0, 64, 16 )
5/tile_mode = 1
5/autotile/bitmask_mode = 1
5/autotile/bitmask_flags = [ Vector2( 0, 0 ), 48, Vector2( 1, 0 ), 56, Vector2( 2, 0 ), 24, Vector2( 3, 0 ), 325 ]
5/autotile/icon_coordinate = Vector2( 0, 0 )
5/autotile/tile_size = Vector2( 16, 16 )
5/autotile/spacing = 0
5/autotile/occluder_map = [  ]
5/autotile/navpoly_map = [  ]
5/autotile/priority_map = [  ]
5/autotile/z_index_map = [  ]
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "industrial.v2.png 6"
6/texture = ExtResource( 1 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 352, 32, 32, 16 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0

[sub_resource type="DynamicFontData" id=2]
font_path = "res://Resorces/Cave-Story.ttf"

[sub_resource type="DynamicFont" id=3]
size = 60
font_data = SubResource( 2 )

[node name="ending" type="Control"]
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buttens" type="CanvasLayer" parent="."]

[node name="TileMap" type="TileMap" parent="buttens"]
position = Vector2( 2.40784, -1.13724 )
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( 3997668, 0, 0 )

[node name="one" type="Node2D" parent="."]

[node name="gound" type="Sprite" parent="one"]
position = Vector2( 320, 80 )
scale = Vector2( 10, 10 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 192, 0, 64, 16 )

[node name="gound2" type="Sprite" parent="one"]
position = Vector2( 960, 80 )
scale = Vector2( 10, 10 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 192, 0, 64, 16 )

[node name="gound3" type="Sprite" parent="one"]
position = Vector2( 1600, 80 )
scale = Vector2( 10, 10 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 192, 0, 64, 16 )

[node name="gound4" type="Sprite" parent="one"]
position = Vector2( 16, 244 )
scale = Vector2( 10, 10 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 192, 0, 64, 16 )

[node name="gound5" type="Sprite" parent="one"]
position = Vector2( 656, 244 )
scale = Vector2( 10, 10 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 192, 0, 64, 16 )

[node name="gound6" type="Sprite" parent="one"]
position = Vector2( 1296, 244 )
scale = Vector2( 10, 10 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 192, 0, 64, 16 )

[node name="gound7" type="Sprite" parent="one"]
position = Vector2( 320, 404 )
scale = Vector2( 10, 10 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 192, 0, 64, 16 )

[node name="gound8" type="Sprite" parent="one"]
position = Vector2( 960, 404 )
scale = Vector2( 10, 10 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 192, 0, 64, 16 )

[node name="gound9" type="Sprite" parent="one"]
position = Vector2( 1600, 404 )
scale = Vector2( 10, 10 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 192, 0, 64, 16 )

[node name="gound10" type="Sprite" parent="one"]
position = Vector2( 12, 564 )
scale = Vector2( 10, 10 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 192, 0, 64, 16 )

[node name="gound11" type="Sprite" parent="one"]
position = Vector2( 652, 564 )
scale = Vector2( 10, 10 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 192, 0, 64, 16 )

[node name="gound12" type="Sprite" parent="one"]
position = Vector2( 1292, 564 )
scale = Vector2( 10, 10 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 192, 0, 64, 16 )

[node name="gound13" type="Sprite" parent="one"]
position = Vector2( 320, 728 )
scale = Vector2( 10, 10 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 192, 0, 64, 16 )

[node name="gound16" type="Sprite" parent="one"]
position = Vector2( 1932, 564 )
scale = Vector2( 10, 10 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 192, 0, 64, 16 )

[node name="gound17" type="Sprite" parent="one"]
position = Vector2( 1936, 244 )
scale = Vector2( 10, 10 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 192, 0, 64, 16 )

[node name="gound14" type="Sprite" parent="one"]
position = Vector2( 960, 728 )
scale = Vector2( 10, 10 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 192, 0, 64, 16 )

[node name="gound15" type="Sprite" parent="one"]
position = Vector2( 1600, 728 )
scale = Vector2( 10, 10 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 192, 0, 64, 16 )

[node name="player" type="Sprite" parent="one"]
position = Vector2( 224, 512 )
scale = Vector2( 10, 10 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 33, 259, 13, 13 )

[node name="player2" type="Sprite" parent="one"]
position = Vector2( 1264, 396 )
scale = Vector2( 100, 69.6364 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 48, 421, 16, 11 )

[node name="two" type="Node2D" parent="."]
visible = false

[node name="gound7" type="Sprite" parent="two"]
position = Vector2( 320, 404 )
scale = Vector2( 10, 10 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 192, 0, 64, 16 )

[node name="gound8" type="Sprite" parent="two"]
position = Vector2( 960, 404 )
scale = Vector2( 10, 10 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 192, 0, 64, 16 )

[node name="gound9" type="Sprite" parent="two"]
position = Vector2( 1600, 404 )
scale = Vector2( 10, 10 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 192, 0, 64, 16 )

[node name="gound10" type="Sprite" parent="two"]
position = Vector2( 12, 564 )
scale = Vector2( 10, 10 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 192, 0, 64, 16 )

[node name="gound11" type="Sprite" parent="two"]
position = Vector2( 652, 564 )
scale = Vector2( 10, 10 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 192, 0, 64, 16 )

[node name="gound12" type="Sprite" parent="two"]
position = Vector2( 1292, 564 )
scale = Vector2( 10, 10 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 192, 0, 64, 16 )

[node name="gound13" type="Sprite" parent="two"]
position = Vector2( 320, 728 )
scale = Vector2( 10, 10 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 192, 0, 64, 16 )

[node name="gound16" type="Sprite" parent="two"]
position = Vector2( 1932, 564 )
scale = Vector2( 10, 10 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 192, 0, 64, 16 )

[node name="gound14" type="Sprite" parent="two"]
position = Vector2( 960, 728 )
scale = Vector2( 10, 10 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 192, 0, 64, 16 )

[node name="gound15" type="Sprite" parent="two"]
position = Vector2( 1600, 728 )
scale = Vector2( 10, 10 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 192, 0, 64, 16 )

[node name="tele" type="Sprite" parent="two"]
position = Vector2( 1176, 156 )
scale = Vector2( 10, 10 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 87, 95, 49, 33 )

[node name="tele2" type="Sprite" parent="two"]
position = Vector2( 748, 380 )
scale = Vector2( 10, 10 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 17, 258, 13, 14 )

[node name="three" type="Node2D" parent="."]
visible = false

[node name="gound7" type="Sprite" parent="three"]
position = Vector2( 320, 404 )
scale = Vector2( 10, 10 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 192, 0, 64, 16 )

[node name="gound8" type="Sprite" parent="three"]
position = Vector2( 960, 404 )
scale = Vector2( 10, 10 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 192, 0, 64, 16 )

[node name="gound9" type="Sprite" parent="three"]
position = Vector2( 1600, 404 )
scale = Vector2( 10, 10 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 192, 0, 64, 16 )

[node name="gound10" type="Sprite" parent="three"]
position = Vector2( 12, 564 )
scale = Vector2( 10, 10 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 192, 0, 64, 16 )

[node name="gound11" type="Sprite" parent="three"]
position = Vector2( 652, 564 )
scale = Vector2( 10, 10 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 192, 0, 64, 16 )

[node name="gound12" type="Sprite" parent="three"]
position = Vector2( 1292, 564 )
scale = Vector2( 10, 10 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 192, 0, 64, 16 )

[node name="gound13" type="Sprite" parent="three"]
position = Vector2( 320, 728 )
scale = Vector2( 10, 10 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 192, 0, 64, 16 )

[node name="gound16" type="Sprite" parent="three"]
position = Vector2( 1932, 564 )
scale = Vector2( 10, 10 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 192, 0, 64, 16 )

[node name="gound14" type="Sprite" parent="three"]
position = Vector2( 960, 728 )
scale = Vector2( 10, 10 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 192, 0, 64, 16 )

[node name="gound15" type="Sprite" parent="three"]
position = Vector2( 1600, 728 )
scale = Vector2( 10, 10 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 192, 0, 64, 16 )

[node name="tele" type="Sprite" parent="three"]
position = Vector2( 1176, 156 )
scale = Vector2( 10, 10 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 87, 95, 49, 33 )

[node name="TextureRect" type="TextureRect" parent="three"]
margin_left = 972.0
margin_right = 1392.0
margin_bottom = 324.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="panel" type="Panel" parent="."]
margin_left = 32.0
margin_top = 792.0
margin_right = 1884.0
margin_bottom = 1180.0
rect_min_size = Vector2( 512, 300 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text_interface_engine" type="ReferenceRect" parent="panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 12.0
margin_right = -12.0
margin_bottom = -12.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_icon": ExtResource( 5 )
}
FONT = SubResource( 3 )

[node name="switch" type="Timer" parent="."]
wait_time = 11.5
one_shot = true
autostart = true

[node name="switch_2" type="Timer" parent="."]
wait_time = 22.1
one_shot = true
autostart = true

[node name="level_menu" type="Timer" parent="."]
wait_time = 27.5
one_shot = true
autostart = true

[node name="soundmaker" parent="." instance=ExtResource( 6 )]
position = Vector2( 912, 480 )
[connection signal="timeout" from="switch" to="." method="_on_switch_timeout"]
[connection signal="timeout" from="switch_2" to="." method="_on_switch_2_timeout"]
[connection signal="timeout" from="level_menu" to="." method="_on_level_menu_timeout"]
